// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cognito backend app client 1`] = `
Object {
  "Resources": Object {
    "CognitoAppClient6799695E": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "CallbackUrls": Array [],
        "Environment": "test",
        "LogoutUrls": Array [],
        "Name": "my-backend-service",
        "Scopes": Array [
          "https://api.vydev.io/read",
          "https://api.vydev.io/write",
        ],
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientProviderframeworkonEventA2D55193",
            "Arn",
          ],
        },
        "Type": "backend",
      },
      "Type": "Custom::VyCognitoAppClient",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientClientSecret0A69F29B": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "Client secret for Vy Cognito app client my-backend-service",
        "Name": "vy/test/cognito/app-client/my-backend-service",
        "SecretString": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClient6799695E",
            "ClientSecret",
          ],
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientLambdaLogGroupA167171A": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CognitoAppClientOnEventHandler6CA96F7E": Object {
      "DependsOn": Array [
        "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C",
        "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "LoggingConfig": Object {
          "LogGroup": Object {
            "Ref": "CognitoAppClientLambdaLogGroupA167171A",
          },
        },
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "execute-api:Invoke",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C",
        "Roles": Array [
          Object {
            "Ref": "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CognitoAppClientProviderLogGroup692F7347": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CognitoAppClientProviderframeworkonEventA2D55193": Object {
      "DependsOn": Array [
        "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17",
        "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/CognitoAppClient/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "CognitoAppClientOnEventHandler6CA96F7E",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": Object {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
          "LogGroup": Object {
            "Ref": "CognitoAppClientProviderLogGroup692F7347",
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "CognitoAppClientOnEventHandler6CA96F7E",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "CognitoAppClientOnEventHandler6CA96F7E",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClientOnEventHandler6CA96F7E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17",
        "Roles": Array [
          Object {
            "Ref": "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cognito frontend app client 1`] = `
Object {
  "Resources": Object {
    "CognitoAppClient6799695E": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "CallbackUrls": Array [
          "https://my-app.vydev.io/auth/callback",
        ],
        "Environment": "prod",
        "LogoutUrls": Array [
          "https://my-app.vydev.io/logout",
        ],
        "Name": "my-web-app",
        "Scopes": Array [
          "email",
          "openid",
          "profile",
        ],
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientProviderframeworkonEventA2D55193",
            "Arn",
          ],
        },
        "Type": "frontend",
      },
      "Type": "Custom::VyCognitoAppClient",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientLambdaLogGroupA167171A": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CognitoAppClientOnEventHandler6CA96F7E": Object {
      "DependsOn": Array [
        "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C",
        "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "LoggingConfig": Object {
          "LogGroup": Object {
            "Ref": "CognitoAppClientLambdaLogGroupA167171A",
          },
        },
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "execute-api:Invoke",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C",
        "Roles": Array [
          Object {
            "Ref": "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CognitoAppClientProviderLogGroup692F7347": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CognitoAppClientProviderframeworkonEventA2D55193": Object {
      "DependsOn": Array [
        "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17",
        "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/CognitoAppClient/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "CognitoAppClientOnEventHandler6CA96F7E",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": Object {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
          "LogGroup": Object {
            "Ref": "CognitoAppClientProviderLogGroup692F7347",
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "CognitoAppClientOnEventHandler6CA96F7E",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "CognitoAppClientOnEventHandler6CA96F7E",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClientOnEventHandler6CA96F7E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17",
        "Roles": Array [
          Object {
            "Ref": "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cognito frontend app client with custom secretName 1`] = `
Object {
  "Resources": Object {
    "CognitoAppClient6799695E": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "CallbackUrls": Array [],
        "Environment": "stage",
        "LogoutUrls": Array [],
        "Name": "my-backend-service",
        "Scopes": Array [
          "https://api.vydev.io/read",
          "https://api.vydev.io/write",
        ],
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientProviderframeworkonEventA2D55193",
            "Arn",
          ],
        },
        "Type": "backend",
      },
      "Type": "Custom::VyCognitoAppClient",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientClientSecret0A69F29B": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "Client secret for Vy Cognito app client my-backend-service",
        "Name": "my-secret",
        "SecretString": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClient6799695E",
            "ClientSecret",
          ],
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "CognitoAppClientLambdaLogGroupA167171A": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CognitoAppClientOnEventHandler6CA96F7E": Object {
      "DependsOn": Array [
        "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C",
        "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "LoggingConfig": Object {
          "LogGroup": Object {
            "Ref": "CognitoAppClientLambdaLogGroupA167171A",
          },
        },
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "execute-api:Invoke",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CognitoAppClientOnEventHandlerServiceRoleDefaultPolicyC2ED5B2C",
        "Roles": Array [
          Object {
            "Ref": "CognitoAppClientOnEventHandlerServiceRoleA9EF0DD8",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CognitoAppClientProviderLogGroup692F7347": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "CognitoAppClientProviderframeworkonEventA2D55193": Object {
      "DependsOn": Array [
        "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17",
        "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Description": "AWS CDK resource provider framework - onEvent (Stack/CognitoAppClient/Provider)",
        "Environment": Object {
          "Variables": Object {
            "USER_ON_EVENT_FUNCTION_ARN": Object {
              "Fn::GetAtt": Array [
                "CognitoAppClientOnEventHandler6CA96F7E",
                "Arn",
              ],
            },
          },
        },
        "Handler": "framework.onEvent",
        "LoggingConfig": Object {
          "ApplicationLogLevel": "FATAL",
          "LogFormat": "JSON",
          "LogGroup": Object {
            "Ref": "CognitoAppClientProviderLogGroup692F7347",
          },
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "CognitoAppClientOnEventHandler6CA96F7E",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "CognitoAppClientOnEventHandler6CA96F7E",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": "lambda:GetFunction",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CognitoAppClientOnEventHandler6CA96F7E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CognitoAppClientProviderframeworkonEventServiceRoleDefaultPolicy2E5FDD17",
        "Roles": Array [
          Object {
            "Ref": "CognitoAppClientProviderframeworkonEventServiceRole9E7C3FEA",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
